--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
